--- a/Envoy/plugin.yml
+++ b/Envoy/plugin.yml
@@ -1,6 +1,6 @@
 main: org.planetfactions.envoy.Main
 name: Envoy
-version: '1.1.2'
+version: '1.0.0'
 description: A Envoy Plugin
 
 permissions:
@@ -22,7 +22,7 @@ permissions:
 
 commands:
   envoy:
-   description: Shows plugin helps
+   description: Shows plugin help with regular envoy command
   envoyauto:
-   description: Shows plugin helps
+   description: Shows plugin help with auto envoy command
      
