Added Reload opt and added Factions Integration

--- a/Envoy/.classpath
+++ b/Envoy/.classpath
@@ -13,5 +13,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/PowerSpec/Videos/Plugin/server.jar" sourcepath="C:/Users/PowerSpec/Videos/Plugin/bukkit-1.9.2-R0.1-20160507.064121-46-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PowerSpec/Videos/Plugin/Factions.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
