--- a/Envoy/plugin.yml
+++ b/Envoy/plugin.yml
@@ -2,6 +2,7 @@ main: org.planetfactions.envoy.Main
 name: Envoy
 version: '1.0.0'
 description: A Envoy Plugin
+softdepend: [Factions]
 
 permissions:
    envoy.*:
